[workspace]
resolver = "2"
members = ["client", "server", "shared", "utils", "asset_cache"]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]


serde = { version = "1.0", features = ["derive", "rc"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
pin-project = "1.0"
thiserror = "1.0"
glam = { version = "0.22.0", features = ["rand", "bytemuck"] }
rand = "0.8.5"
itertools = "0.10.5"
anyhow = "1.0"
pretty_assertions = "1.3"
as-any = "0.3"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = "s"

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = "s"
