[package]
name = "elements_asset_cache"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
serde.workspace = true
as-any.workspace = true
async-trait.workspace = true
futures.workspace = true
itertools.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
chrono.workspace = true
tracing.workspace = true
pin-project.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.25", features = ["full", "tracing", "parking_lot"] }
