[package]
name = "orion-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orion-shared = { path = "../shared" }

itertools.workspace = true
rand.workspace = true
glam.workspace = true
parking_lot.workspace = true
anyhow.workspace = true

tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "parking_lot",
    "bytes",
    "parking_lot",
    "sync",
] }

tracing = "0.1"
tracing-tree = "0.2"
tracing-subscriber = "0.3"
