[package]
name = "shared"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
serde = "1.0"
static_assertions = "1.1"
async-trait.workspace = true
reqwest = "0.11"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1"

glam.workspace = true
rand.workspace = true
anyhow.workspace = true
itertools.workspace = true

getrandom = { version = "0.2.8" }

# quinn = { version = "0.9", default_features = false, features = [
#     "ring",
#     "rustls",
# ] }
# rustls = "0.20"
winit = "0.28"

wgpu = { version = "0.17" }


bytemuck = { version = "1.13", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
tracing-web = "0.1"
rand_pcg = { version = "0.3.1" }

futures.workspace = true
tokio = { version = "1.25", features = ["rt", "sync", "time", "macros"] }
once_cell = "1.17.0"
pin-project.workspace = true
thiserror.workspace = true

parking_lot.workspace = true
gloo = { version = "0.8.0", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
