[package]
name = "utils"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

thiserror = "1.0"
parking_lot = "0.12"
pin-project = "1.0"
once_cell = "1.17"
tracing = "0.1"
time = { version = "0.3", features = ["wasm-bindgen"] }
slab = "0.4.8"
flume = "0.10"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
derive_more = "0.99"
slotmap = "1.0"
ordered-float = "3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Document"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.8", features = ["futures"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.25", features = ["full", "tracing", "parking_lot"] }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"


[features]
default = ["console_error_panic_hook"]
